# recog-rs

./: .env  .gitignore  ADVANCED_FEATURES.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  benchmark.sh  test_filename.rs  test_fingerprints.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  performance.yml  release.yml  security.yml
benches/: fingerprint_matching.rs  xml_loading.rs
examples/: apache_banner.txt  plugin_demo.rs
src/: async_loader.rs  cli.rs  comprehensive_tests.rs  error.rs  fingerprint.rs  lib.rs  loader.rs  main.rs  matcher.rs  params.rs  plugin.rs
xml/: sample_fingerprints.xml
